DT-2004-03-02-1  Bugfix:    o Ulong parsing now complains about negative numbers
                            o Tweaked freefix.pl search parameters
                            NOTE: I have to check this in before I can compile
                                  or test it...
                 Changed:   o sge_object.c, freefix.pl
                 Issue:     745 (not done yet)

DT-2004-03-02-0  Bugfix:    o Fixed qconf -mq help output.
                            o Added -commit option to freefix.pl to overwrite
                              original files.
                 Changed:   msg_common.h, freefix.pl
                 Issue:     756

MD-2004-03-02-0  Bugfix:    - added -dl option in qalter help output
                            - changed product_mode to security_mode in bootstrap
                            - fixed qmaster crash after getting wrong schedd config
                            - changed weight values in preconfigured schedd setups
                 Review:    SG
                 Changed:   inst_sge, qalter, schedd

CR-2004-03-02-1  Bugfix:    - client will close it's own connection after closing 
                              connection timeout. Before this fix only the server
                              closed the connection.
                            - setting read, write and ack timeout (on tcp layer)
                              back to 15 seconds.
                            - cl_get_error_text() now return real error messages.
                 Changed:   commlib

AS-2004-03-01-2  Enhancem.: make all test binaries for commlib and japi by default
                            - needed for testsuite

AS-2004-03-01-1  Enhancem.: renamed some install files and directories
                            - moved startup template scripts to util/rctemplates 
                            - renamed startup template scripts to xxx_template
                              where "xxx" is the same name as the final name