@@ -111,6 +111,8 @@ char **argv
       me_who = QALTER;
    } 
 
+   log_state_set_log_gui(0);
+
    sge_gdi_param(SET_MEWHO, me_who, NULL);
    if ((cl_err = sge_gdi_setup(prognames[uti_state_get_mewho()], &alp))) {
       answer_exit_if_not_recoverable(lFirst(alp));
