@@ -62,6 +62,8 @@ int main(int argc, char **argv)
 
    lInit(nmv);
 
+   log_state_set_log_gui(0);
+
    sge_gdi_param(SET_MEWHO, QCONF, NULL);
    if (sge_gdi_setup(prognames[QCONF], &alp)!=AE_OK) {
       answer_exit_if_not_recoverable(lFirst(alp));
