@@ -477,6 +477,9 @@ int main(int argc, char *argv[])
    /* dump pid to file */
    qevent_dump_pid_file();
 
+   log_state_set_log_gui(0);
+
+
    sge_gdi_param(SET_MEWHO, QEVENT, NULL);
 
    gdi_setup = sge_gdi_setup(prognames[QEVENT], &alp);
