@@ -115,6 +115,8 @@ char **argv
 
    DENTER_MAIN(TOP_LAYER, "qhost");
   
+   log_state_set_log_gui(0);
+
    sge_gdi_param(SET_MEWHO, QHOST, NULL);
    if (sge_gdi_setup(prognames[QHOST], &alp) != AE_OK) {
       answer_exit_if_not_recoverable(lFirst(alp));
