@@ -221,10 +221,9 @@ lList **answerp
 
    status = check_isalive(sge_get_master(0));
 
-#ifdef ENABLE_NGC 
    DPRINTF(("check_isalive() returns %d (%s)\n", status, cl_get_error_text(status)));
    if (status != CL_RETVAL_OK) {
-      sprintf(msg, XmtLocalize(AppShell, "cannot reach %s", "cannot reach %s"), cl_get_error_text(status));
+      sprintf(msg, XmtLocalize(AppShell, "cannot reach qmaster: %s", "cannot reach qmaster: %s"), cl_get_error_text(status));
       contact_ok = XmtDisplayErrorAndAsk(AppShell, "nocontact",
                                                 msg, "@{Retry}", "@{Abort}",
                                                 XmtYesButton, NULL);
@@ -236,26 +235,6 @@ lList **answerp
          qmonExitFunc(1);
       }
    }
-#else
-   DPRINTF(("check_isalive() returns %d (%s)\n", status, cl_errstr(status)));
-   if (status != CL_OK) {
-      if (status == CL_UNKNOWN_RECEIVER)
-         sprintf(msg, XmtLocalize(AppShell, "cannot reach qmaster", "cannot reach qmaster"));
-      else
-         sprintf(msg, XmtLocalize(AppShell, "cannot reach %s", "cannot reach %s"), cl_errstr(status));
-
-      contact_ok = XmtDisplayErrorAndAsk(AppShell, "nocontact",
-                                                msg, "@{Retry}", "@{Abort}",
-                                                XmtYesButton, NULL);
-      /*
-      ** we don't want to retry, so go down
-      */
-      if (!contact_ok) {
-         DEXIT;
-         qmonExitFunc(1);
-      }
-   }
-#endif
 
    for (i=0; i<XtNumber(QmonMirrorList); i++) {
       if (selector & (1<<i)) {
@@ -354,13 +333,6 @@ lEnumeration *what
     * SGE_GDI_DEL
     */
    sge_stopwatch_start(0);
-
-#ifdef ENABLE_NGC
-#else
-   /* set timeout */
-   set_commlib_param(CL_P_TIMEOUT_SRCV, 10*60, NULL, NULL);
-   set_commlib_param(CL_P_TIMEOUT_SSND, 10*60, NULL, NULL);   
-#endif
 
    /* prepare gdi request for 'all' and '-uall' parameters */
    cmd = SGE_GDI_DEL;
