@@ -1218,6 +1218,8 @@ int main(int argc, char **argv)
       my_who = QSH;
    }
 
+   log_state_set_log_gui(0);
+
    sge_gdi_param(SET_MEWHO, my_who, NULL);
    if (sge_gdi_setup(prognames[my_who], &alp)!=AE_OK) {
       answer_exit_if_not_recoverable(lFirst(alp));
