@@ -161,6 +161,8 @@ char **argv
    
    sge_mt_init();
 
+   log_state_set_log_gui(0);
+
    sge_gdi_param(SET_MEWHO, QSTAT, NULL);
    if (sge_gdi_setup(prognames[QSTAT], &alp)!=AE_OK) {
       answer_exit_if_not_recoverable(lFirst(alp));
