@@ -165,7 +165,13 @@ bool sge_gdi_check_permission(lList **alpp, int option)
 
   if (permList == NULL) {
      DPRINTF(("Permlist is NULL\n"));
-     alpp = &alp;
+     if (alpp != NULL) {
+        if (*alpp == NULL) {
+           *alpp = alp;
+        } else {
+           lAddList(*alpp, alp); 
+        }       
+     }
      failed_checks++;
      return -10;
   } else {
